# legendary_train

./: .gitignore  .jsdocrc.json  .prettierignore  Pipfile  README.md  bitbucket-pipelines.yml  db.sqlite3  manage.py  package.json  pyproject.toml
blog/: models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_id.py
blog/static/blog/: main.css
blog/templates/blog/: about.html  base.html  home.html  pdf_viewer.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
chat/: async_consumers.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: index.html  room.html
classrooms/: models.py  seed_quiz.js
leads/: models.py  tests.py  urls.py  views.py
leads/migrations/: 0001_initial.py  0002_lead_remote_position.py  0003_alter_lead_employer_overview.py  0004_lead_experience_preferred.py  0005_auto_20210504_1746.py  0006_lead_notes.py  0007_alter_lead_application_status.py
leads/templates/leads/: detail.html
legendary_train/: __init__.py  asgi.py  character_normalizer.js  character_normalizer.py  check_package_installation.py  logger.py  settings.py  tests.py  urls.py  wsgi.py
notes/: models.py  serializers.py  tests.py  urls.py  views.py
notes/migrations/: 0001_initial.py
public/: index.html
src/: Board.js  Game.js  Square.js  board_style.css  index.js  useCanvas.js
src/adapters/: WebSocketService.js  analytics.js  useFetchData.js  useMessagePack.js  usePostData.js
src/app/: App.css  App.js  App.test.js
src/components/blog/: Blog.js  NewsRepository.js  Post.js  PostList.js  Repository.js  Repository.json
src/components/channel/: Channel.js  ChannelList.js
src/components/chat/: CHAT.md  ChatContainer.js  ChatList.js  ChatLobby.js  ChatMessage.js  ChatRoom.js  FriendStatus.js  Title.js  TostNotification.js  chatManager.js  chat_helpers.js  message.css
src/components/checkout/: Checkout.js
src/components/config/: ApiContext.js  useDiagnostics.js
src/components/header/: Header.js  header.css
src/components/home/: Home.js
src/components/login/: Login.js
src/components/modal/: Modal.js  styles_modal.css
src/components/navigation/: NavBar.js
src/components/notes/: Note.js  NoteContainer.js  NoteWidget.js  Notes.js  PinnedNotes.js  notes.test.js
src/components/persistance/: database_init.json  useLocalStorage.js  useRemoteStorage.js
src/components/profile/: FriendRequest.js  Profile.js  (+4 more)
src/config/: index.js  user_device.js
src/context/: AuthenticationContext.js  AvailableAPI.js  ChatContext.js  GlobalState.js  WeatherIcons.js
src/hooks/: useCanvas.js  useDiagnostics.js  useFriendStatus.js  useLocalForge.js  useLocalStorage.js  useRemoteStorage.js
src/styles/: Fireball.js  fireball.css  main.css  result.svg:Zone.Identifier  solitare.css
static/: main.js  reconnecting_websocket.js  style.css
todos/: admin.py  models.py  tests.py
todos/fixtures/: todo_init.json
todos/migrations/: 0001_initial.py
users/: admin.py  forms.py  messedup.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  users_init.sh  views.py
users/api/: rest_views.py  serializers.py
users/fixtures/: init_data.json  partial_users.json  posts_init.py  users.json
users/migrations/: 0001_initial.py  0002_profile_birthdate.py  0002_profile_friends.py  0003_friendrequest.py  0003_profile_location.py  0004_profile_headline.py  0004_profile_pronouns.py  0005_auto_20210501_2254.py  0005_auto_20210507_2159.py  0006_alter_profile_id.py  0007_friendrequest.py
(+29 files in other folders)
